fixing collapse heigh

--- a/src/assets/styles/modules/_navbar.scss
+++ b/src/assets/styles/modules/_navbar.scss
@@ -77,6 +77,10 @@
 
 */
 
+.h-90{
+  height: 90%;
+}
+
 .collapse-1 {
   background-color: white;
   border: 1px solid black;
